--- a/SumFrameSudoku.ipynb
+++ b/SumFrameSudoku.ipynb
@@ -34,13 +34,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wNegIy74ykQM",
-        "outputId": "eef10484-6c8b-4e4e-c3c6-6c0c86f0774b"
+        "outputId": "186cce3e-d3c9-4149-dc1c-879776e94164"
       },
       "outputs": [
         {
@@ -61,18 +61,7 @@
         }
       ],
       "source": [
-        "!pip install ortools"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "lines_to_next_cell": 1,
-        "id": "jD00uJxwykQO"
-      },
-      "outputs": [],
-      "source": [
+        "!pip install ortools\n",
         "from ortools.sat.python import cp_model\n",
         "from itertools import product"
       ]
@@ -87,40 +76,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 22,
-      "metadata": {
-        "id": "tPuu8X4jykQP"
-      },
-      "outputs": [],
-      "source": [
-        "top = [15, 18, 12, 11, 21, 13, 15, 17, 13]\n",
-        "right = [22, 8, 15, 22, 12, 11, 15, 13, 17]\n",
-        "bottom = [15, 9, 21, 10, 16, 19, 13, 15, 17]\n",
-        "left = [8, 15, 22, 11, 13, 21, 18, 19, 8]"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "zFeqs53eykQP"
       },
       "source": [
         "And another example (commented out)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "tDBy5cIwykQQ"
-      },
-      "outputs": [],
-      "source": [
-        "# top = [21, 12, 12, 13, 14, 18, 10, 19, 16]\n",
-        "# right = [20, 15, 10, 22, 8, 15, 17, 15, 13]\n",
-        "# bottom = [17, 9, 19, 18, 13, 14, 23, 15, 7]\n",
-        "# left = [12, 12, 21, 14, 14, 17, 14, 9, 22]"
       ]
     },
     {
@@ -134,23 +95,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "id": "y52I4MxnykQR"
-      },
-      "outputs": [],
-      "source": [
-        "model = cp_model.CpModel()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 17,
       "metadata": {
         "id": "inSnXkUDykQR"
       },
       "outputs": [],
       "source": [
+        "top = [15, 18, 12, 11, 21, 13, 15, 17, 13]\n",
+        "right = [22, 8, 15, 22, 12, 11, 15, 13, 17]\n",
+        "bottom = [15, 9, 21, 10, 16, 19, 13, 15, 17]\n",
+        "left = [8, 15, 22, 11, 13, 21, 18, 19, 8]\n",
+        "\n",
+        "top = [21, 12, 12, 13, 14, 18, 10, 19, 16]\n",
+        "right = [20, 15, 10, 22, 8, 15, 17, 15, 13]\n",
+        "bottom = [17, 9, 19, 18, 13, 14, 23, 15, 7]\n",
+        "left = [12, 12, 21, 14, 14, 17, 14, 9, 22]\n",
+        "\n",
+        "model = cp_model.CpModel()\n",
         "# Type your model here ...\n",
         "board =  [[model.NewIntVar(1, 9, f\"({i},{j})\") for j in range(9)] for i in range(9)]\n",
         "\n",
@@ -161,64 +122,22 @@
         "for i in range(3):\n",
         "  for j in range(3):\n",
         "    model.AddAllDifferent([board[i * 3 + di][j * 3 + dj] for di in range(3) for dj in range(3)])\n",
-        "board_size = 9\n",
         "\n",
-        "# sum stuff\n",
-        "# for i in range(9):\n",
-        "#   if i < 3 or i >= 6:\n",
-        "#         model.Add(sum(board[i][j] for j in range(3)) == top[i])\n",
-        "#         model.Add(sum(board[j][i] for j in range(3)) == left[i])\n",
-        "#         model.Add(sum(board[i][j] for j in range(9-3, 9)) == bottom[i])\n",
-        "#         model.Add(sum(board[j][i] for j in range(9-3, 9)) == right[i])\n",
-        "# for i in range(9):\n",
-        "#         model.Add(sum(board[i][j] for j in range(3)) == left[i])\n",
-        "#         model.Add(sum(board[i][j] for j in range(9-3, 9)) == right[i])\n",
-        "#         model.Add(sum(board[j][i] for j in range(3)) == top[i])\n",
-        "#         model.Add(sum(board[j][i] for j in range(9-3, 9)) == bottom[i])\n",
+        "for i in range(3):\n",
+        "  for j in range(9):\n",
+        "    if i == 0:\n",
+        "      model.Add(sum(board[i * 3 + di][j] for di in range(3)) == top[j])\n",
+        "    elif i == 2:\n",
+        "      model.Add(sum(board[i * 3 + di][j] for di in range(3)) == bottom[j])\n",
         "\n",
-        "# for i in range(board_size):\n",
-        "#         if i < 3 or i >= 6:  # Apply the sum constraints only to the outer parts of the board\n",
-        "#             model.Add(sum(board[i][j] for j in range(3)) == left[i])\n",
-        "#             model.Add(sum(board[i][j] for j in range(board_size-3, board_size)) == right[i])\n",
-        "#             model.Add(sum(board[j][i] for j in range(3)) == top[i])\n",
-        "#             model.Add(sum(board[j][i] for j in range(board_size-3, board_size)) == bottom[i])\n",
-        "\n",
-        "# for i in range(3):\n",
-        "#   for j in range(9):\n",
-        "#     # print(f'board item {i}, {j}; top[{j}] = {top[j]}; bottom[{j}] = {bottom[j]}')\n",
-        "#     if i == 0:\n",
-        "#       model.Add(sum(board[i * 3 + di][j] for di in range(3)) == top[j])\n",
-        "#     # elif i == 1:\n",
-        "#       # continue\n",
-        "#     elif i == 2:\n",
-        "#       model.Add(sum(board[i * 3 + di][j] for di in range(3)) == bottom[j])\n",
-        "\n",
-        "# for i in range(9):\n",
-        "#   for j in range(3):\n",
-        "#     print(f'board item {i}, {j}; right[{i}] = {right[i]}; left[{i}] = {left[i]}')\n",
-        "#     if j == 0:\n",
-        "#       # print(f'left {i}: {left[i]}')\n",
-        "#       # for dj in range(3):\n",
-        "#       #   print(f'board[{i}][{j * 3 + dj}]')\n",
-        "#       model.Add(sum(board[i][j * 3 + dj] for dj in range(3)) == left[i])\n",
-        "#     # elif j == 1:\n",
-        "#       # continue\n",
-        "#     elif j == 2:\n",
-        "#       # print(f'right {i}: {right[i]}')\n",
-        "#       # for dj in range(3):\n",
-        "#       #   print(f'board[{i}][{j * 3 + dj}]')\n",
-        "#       model.Add(sum(board[i][j * 3 + dj] for dj in range(3)) == right[i])\n",
+        "for i in range(9):\n",
+        "  for j in range(3):\n",
+        "    if j == 0:\n",
+        "      model.Add(sum(board[i][j * 3 + dj] for dj in range(3)) == left[i])\n",
+        "    elif j == 2:\n",
+        "      model.Add(sum(board[i][j * 3 + dj] for dj in range(3)) == right[i])\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7tQPQWChykQR"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -231,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 11,
       "metadata": {
         "id": "LmVETesKykQS"
       },
@@ -263,13 +182,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PUFySKKJykQS",
-        "outputId": "8419be92-3c90-4fb3-f15f-2a4e835f1a1b"
+        "outputId": "35428726-c458-4998-8532-6472aafd41ae"
       },
       "outputs": [
         {
@@ -277,7 +196,28 @@
           "name": "stdout",
           "text": [
             "[[(0,0)(1..9), (0,1)(1..9), (0,2)(1..9), (0,3)(1..9), (0,4)(1..9), (0,5)(1..9), (0,6)(1..9), (0,7)(1..9), (0,8)(1..9)], [(1,0)(1..9), (1,1)(1..9), (1,2)(1..9), (1,3)(1..9), (1,4)(1..9), (1,5)(1..9), (1,6)(1..9), (1,7)(1..9), (1,8)(1..9)], [(2,0)(1..9), (2,1)(1..9), (2,2)(1..9), (2,3)(1..9), (2,4)(1..9), (2,5)(1..9), (2,6)(1..9), (2,7)(1..9), (2,8)(1..9)], [(3,0)(1..9), (3,1)(1..9), (3,2)(1..9), (3,3)(1..9), (3,4)(1..9), (3,5)(1..9), (3,6)(1..9), (3,7)(1..9), (3,8)(1..9)], [(4,0)(1..9), (4,1)(1..9), (4,2)(1..9), (4,3)(1..9), (4,4)(1..9), (4,5)(1..9), (4,6)(1..9), (4,7)(1..9), (4,8)(1..9)], [(5,0)(1..9), (5,1)(1..9), (5,2)(1..9), (5,3)(1..9), (5,4)(1..9), (5,5)(1..9), (5,6)(1..9), (5,7)(1..9), (5,8)(1..9)], [(6,0)(1..9), (6,1)(1..9), (6,2)(1..9), (6,3)(1..9), (6,4)(1..9), (6,5)(1..9), (6,6)(1..9), (6,7)(1..9), (6,8)(1..9)], [(7,0)(1..9), (7,1)(1..9), (7,2)(1..9), (7,3)(1..9), (7,4)(1..9), (7,5)(1..9), (7,6)(1..9), (7,7)(1..9), (7,8)(1..9)], [(8,0)(1..9), (8,1)(1..9), (8,2)(1..9), (8,3)(1..9), (8,4)(1..9), (8,5)(1..9), (8,6)(1..9), (8,7)(1..9), (8,8)(1..9)]]\n",
-            "3\n"
+            "[6] [5] [1] [2] [8] [3] [4] [9] [7] \n",
+            "\n",
+            "[7] [3] [2] [4] [5] [9] [1] [8] [6] \n",
+            "\n",
+            "[8] [4] [9] [7] [1] [6] [5] [2] [3] \n",
+            "\n",
+            "[1] [8] [5] [3] [2] [4] [7] [6] [9] \n",
+            "\n",
+            "[4] [7] [3] [6] [9] [8] [2] [1] [5] \n",
+            "\n",
+            "[2] [9] [6] [5] [7] [1] [3] [4] [8] \n",
+            "\n",
+            "[5] [1] [8] [9] [3] [2] [6] [7] [4] \n",
+            "\n",
+            "[3] [2] [4] [8] [6] [7] [9] [5] [1] \n",
+            "\n",
+            "[9] [6] [7] [1] [4] [5] [8] [3] [2] \n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "4\n"
           ]
         }
       ],
@@ -290,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
