Mit Colab erstellt

--- a/MagicSquares.ipynb
+++ b/MagicSquares.ipynb
@@ -40,7 +40,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WVAyA54gqCzm",
-        "outputId": "f8a7dda7-7c46-4d0c-8d6c-02a2a557b6e1"
+        "outputId": "1fad07d2-8f69-4641-b95b-1fc1eb7ab48c"
       },
       "outputs": [
         {
@@ -49,15 +49,15 @@
           "text": [
             "Collecting ortools\n",
             "  Downloading ortools-9.10.4067-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (26.7 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m26.7/26.7 MB\u001b[0m \u001b[31m28.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m26.7/26.7 MB\u001b[0m \u001b[31m25.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting absl-py>=2.0.0 (from ortools)\n",
             "  Downloading absl_py-2.1.0-py3-none-any.whl (133 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.7/133.7 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.7/133.7 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.10/dist-packages (from ortools) (1.25.2)\n",
             "Requirement already satisfied: pandas>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from ortools) (2.0.3)\n",
             "Collecting protobuf>=5.26.1 (from ortools)\n",
             "  Downloading protobuf-5.26.1-cp37-abi3-manylinux2014_x86_64.whl (302 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.8/302.8 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.8/302.8 kB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting immutabledict>=3.0.0 (from ortools)\n",
             "  Downloading immutabledict-4.2.0-py3-none-any.whl (4.7 kB)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas>=2.0.0->ortools) (2.8.2)\n",
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "lines_to_next_cell": 1,
         "id": "-VK0YrLTqCzo"
@@ -134,24 +134,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BmygI9aHqCzq",
-        "outputId": "accd1e81-27d9-42b1-9cfd-590c5fb5a5c7"
+        "outputId": "22d75294-c037-4124-edd2-574f69ec5b0a"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<ortools.sat.python.cp_model.Constraint at 0x7f4bf05b65f0>"
+              "<ortools.sat.python.cp_model.Constraint at 0x7c5e7adafee0>"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 21
         }
       ],
       "source": [
@@ -167,19 +167,63 @@
         "\n",
         "model.AddAllDifferent([cell for row in board for cell in row])\n",
         "\n",
+        "# my own code\n",
+        "# for i in range(1, size):\n",
+        "#   model.Add(sum([board[i][j] for j in range(size)]) == sum(board[0][j] for j in range(size))) # Rows should have same sum as row 0\n",
+        "#   model.Add(sum([board[j][i] for j in range(size)]) == sum(board[j][0] for j in range(size))) # Columns should have same sum as column 0\n",
+        "\n",
+        "# model.Add(sum(board[0][j] for j in range(size)) == sum(board[j][0] for j in range(size))) # Columns and rows should have the same sum\n",
+        "# model.Add(sum([board[i][i] for i in range(size)]) == sum(board[0][j] for j in range(size))) # diagonal 1\n",
+        "# model.Add(sum([board[i][size-1-i] for i in range(size)]) == sum(board[0][j] for j in range(size))) # diagonal 2\n",
+        "\n",
+        "\n",
+        "# model.Add(board[0][0] == 9)\n",
+        "# model.Add(board[0][size-1] == 8)\n",
+        "# model.Add(board[size-1][0] == 6)\n",
+        "# model.Add(board[size-1][size-1] == 11)\n",
+        "\n",
+        "\n",
+        "# optimized slightly:\n",
+        "model = cp_model.CpModel()\n",
+        "board = [[model.NewIntVar(1, n, f\"({i},{j})\") for j in range(size)] for i in range(size)]\n",
+        "\n",
+        "model.AddAllDifferent([cell for row in board for cell in row])\n",
+        "\n",
+        "# Store the sum of the first row and column in a variable\n",
+        "first_row_sum = sum(board[0][j] for j in range(size))\n",
+        "first_col_sum = sum(board[j][0] for j in range(size))\n",
+        "\n",
         "for i in range(1, size):\n",
-        "  model.Add(sum([board[i][j] for j in range(size)]) == sum(board[0][j] for j in range(size))) # Rows should have same sum as row 0\n",
-        "  model.Add(sum([board[j][i] for j in range(size)]) == sum(board[j][0] for j in range(size))) # Columns should have same sum as column 0\n",
+        "  model.Add(sum(board[i][j] for j in range(size)) == first_row_sum) # Rows should have same sum as row 0\n",
+        "  model.Add(sum(board[j][i] for j in range(size)) == first_col_sum) # Columns should have same sum as column 0\n",
         "\n",
-        "model.Add(sum(board[0][j] for j in range(size)) == sum(board[j][0] for j in range(size))) # Columns and rows should have the same sum\n",
-        "model.Add(sum([board[i][i] for i in range(size)]) == sum(board[0][j] for j in range(size))) # diagonal 1\n",
-        "model.Add(sum([board[i][size-1-i] for i in range(size)]) == sum(board[0][j] for j in range(size))) # diagonal 2\n",
+        "model.Add(first_row_sum == first_col_sum) # Columns and rows should have the same sum\n",
         "\n",
+        "# Use a single loop for the diagonal constraints\n",
+        "diag1_sum = 0\n",
+        "diag2_sum = 0\n",
+        "for i in range(size):\n",
+        "    diag1_sum += board[i][i]\n",
+        "    diag2_sum += board[i][size-1-i]\n",
+        "model.Add(diag1_sum == first_row_sum) # diagonal 1\n",
+        "model.Add(diag2_sum == first_row_sum) # diagonal 2\n",
         "\n",
         "model.Add(board[0][0] == 9)\n",
         "model.Add(board[0][size-1] == 8)\n",
         "model.Add(board[size-1][0] == 6)\n",
-        "model.Add(board[size-1][size-1] == 11)\n"
+        "model.Add(board[size-1][size-1] == 11)\n",
+        "\n",
+        "\n",
+        "# further optimizations\n",
+        "# Symmetry breaking constraint\n",
+        "model.Add(board[0][1] < board[0][size-1])\n",
+        "\n",
+        "# Decision strategy\n",
+        "vars = [cell for row in board for cell in row]\n",
+        "model.AddDecisionStrategy(vars, cp_model.CHOOSE_FIRST, cp_model.SELECT_MIN_VALUE)\n",
+        "\n",
+        "# another symmetry breaking constraint, this time in the col\n",
+        "model.Add(board[1][0] < board[size-1][0])"
       ]
     },
     {
@@ -193,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 4,
       "metadata": {
         "id": "wlSQXBPkqCzr"
       },
@@ -224,52 +268,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YWbk7MH4qCzr",
-        "outputId": "5bfff931-41d2-4ae2-fe7a-a6382d61a999"
+        "outputId": "b7b58c69-f0f1-4dbe-d301-bf50abda8355"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[9] [16] [1] [8] \n",
-            "\n",
-            "[7] [10] [15] [2] \n",
-            "\n",
-            "[12] [5] [4] [13] \n",
-            "\n",
-            "[6] [3] [14] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [16] [1] [8] \n",
-            "\n",
-            "[15] [2] [7] [10] \n",
-            "\n",
-            "[4] [13] [12] [5] \n",
-            "\n",
-            "[6] [3] [14] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [15] [2] [8] \n",
-            "\n",
-            "[12] [1] [16] [5] \n",
-            "\n",
-            "[7] [4] [13] [10] \n",
-            "\n",
-            "[6] [14] [3] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
             "[9] [1] [16] [8] \n",
             "\n",
             "[4] [12] [13] [5] \n",
@@ -281,166 +292,36 @@
             "\n",
             "\n",
             "\n",
-            "[9] [2] [15] [8] \n",
-            "\n",
-            "[12] [13] [4] [5] \n",
-            "\n",
-            "[7] [16] [1] [10] \n",
-            "\n",
-            "[6] [3] [14] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [15] [2] [8] \n",
-            "\n",
-            "[7] [1] [16] [10] \n",
-            "\n",
-            "[12] [4] [13] [5] \n",
-            "\n",
-            "[6] [14] [3] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [1] [16] [8] \n",
-            "\n",
-            "[12] [4] [5] [13] \n",
-            "\n",
-            "[7] [15] [10] [2] \n",
-            "\n",
-            "[6] [14] [3] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [3] [14] [8] \n",
-            "\n",
-            "[12] [13] [4] [5] \n",
-            "\n",
-            "[7] [16] [1] [10] \n",
-            "\n",
-            "[6] [2] [15] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [2] [15] [8] \n",
-            "\n",
-            "[7] [13] [4] [10] \n",
-            "\n",
-            "[12] [16] [1] [5] \n",
-            "\n",
-            "[6] [3] [14] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [3] [14] [8] \n",
-            "\n",
-            "[7] [13] [4] [10] \n",
-            "\n",
-            "[12] [16] [1] [5] \n",
-            "\n",
-            "[6] [2] [15] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [3] [14] [8] \n",
-            "\n",
-            "[15] [2] [7] [10] \n",
-            "\n",
-            "[4] [13] [12] [5] \n",
-            "\n",
-            "[6] [16] [1] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [3] [14] [8] \n",
-            "\n",
-            "[7] [10] [15] [2] \n",
-            "\n",
-            "[12] [5] [4] [13] \n",
-            "\n",
-            "[6] [16] [1] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [14] [3] [8] \n",
-            "\n",
-            "[12] [4] [5] [13] \n",
-            "\n",
-            "[7] [15] [10] [2] \n",
-            "\n",
-            "[6] [1] [16] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [14] [3] [8] \n",
-            "\n",
-            "[12] [1] [16] [5] \n",
-            "\n",
-            "[7] [4] [13] [10] \n",
-            "\n",
-            "[6] [15] [2] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [14] [3] [8] \n",
-            "\n",
-            "[4] [12] [13] [5] \n",
-            "\n",
-            "[15] [7] [2] [10] \n",
-            "\n",
-            "[6] [1] [16] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n",
-            "[9] [14] [3] [8] \n",
-            "\n",
-            "[7] [1] [16] [10] \n",
-            "\n",
-            "[12] [4] [13] [5] \n",
-            "\n",
-            "[6] [15] [2] [11] \n",
-            "\n",
-            "\n",
-            "\n",
-            "\n"
+            "4\n"
           ]
         }
       ],
       "source": [
         "solver = cp_model.CpSolver()\n",
         "solver.parameters.enumerate_all_solutions = True\n",
-        "status = solver.Solve(model, SolutionPrinter(board))"
+        "status = solver.Solve(model, SolutionPrinter(board))\n",
+        "print(status)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eyX3CxrpqCzs",
-        "outputId": "d40a370f-932a-42bb-90b4-b6a53406576a"
+        "outputId": "78941d96-2fb1-4232-ddcb-9770d349d553"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Runtime:   0.177127695ms\n",
-            "Booleans:  252\n",
-            "Failures:  494\n",
-            "Branches:  3932\n"
+            "Runtime:   0.039061308ms\n",
+            "Booleans:  180\n",
+            "Failures:  59\n",
+            "Branches:  2042\n"
           ]
         }
       ],
@@ -448,7 +329,37 @@
         "print(f\"Runtime:   {solver.WallTime()}ms\")\n",
         "print(f\"Booleans:  {solver.NumBooleans()}\")\n",
         "print(f\"Failures:  {solver.NumConflicts()}\")\n",
-        "print(f\"Branches:  {solver.NumBranches()}\")"
+        "print(f\"Branches:  {solver.NumBranches()}\")\n",
+        "\n",
+        "# previous code\n",
+        "# Runtime:   0.223372703ms\n",
+        "# Booleans:  252\n",
+        "# Failures:  494\n",
+        "# Branches:  3932\n",
+        "\n",
+        "# optimized version\n",
+        "# Runtime:   0.174512787ms\n",
+        "# Booleans:  252\n",
+        "# Failures:  494\n",
+        "# Branches:  3932\n",
+        "\n",
+        "# one more symmetry breaking constraint\n",
+        "# Runtime:   0.11152139200000001ms\n",
+        "# Booleans:  228\n",
+        "# Failures:  128\n",
+        "# Branches:  3012\n",
+        "\n",
+        "# added Decision strategy\n",
+        "# Runtime:   0.09832262400000001ms\n",
+        "# Booleans:  228\n",
+        "# Failures:  128\n",
+        "# Branches:  3012\n",
+        "\n",
+        "# another symmetry breaking constraint added\n",
+        "# Runtime:   0.039061308ms\n",
+        "# Booleans:  180\n",
+        "# Failures:  59\n",
+        "# Branches:  2042"
       ]
     }
   ],
